--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    height: 100%;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -5,8 +14,15 @@ header {
 }
 
 main {
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#model-view-port {
+    flex: 1;
+    background-color: magenta;
+    width: 100%;
 }
