Increase action button size

--- a/src/components/action-button/action-button.module.css
+++ b/src/components/action-button/action-button.module.css
@@ -1,4 +1,12 @@
 .actionButton {
     background-color: purple;
     border-radius: 50%;
+    font-size: 2rem;
+    width: 1.5em;
+    height: 1.5em;
+}
+
+.icon {
+    height: 1em;
+    width: 1em;
 }
