Add icon to button

--- a/src/components/action-button/action-button.module.css
+++ b/src/components/action-button/action-button.module.css
@@ -4,6 +4,10 @@
     font-size: 2rem;
     width: 1.5em;
     height: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
 }
 
 .icon {
