--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,5 @@
-@import "./themes/light.css";
-@import "./themes/dark.css";
+@import './themes/light.css';
+@import './themes/dark.css';
 
 body {
     margin: 0;
